# brushup_2025

./: .Rhistory  README.md  pyproject.toml
5_EDA/: 5a_EDA_basic.ipynb  5b_EDA_continued.ipynb
files/3_basics/: 3a_datatypes_operations.ipynb
files/4_directories_programming/: 4b_functions_classes.ipynb  4c_combining_data.ipynb
files/5_EDA/: 5c_EDA_more_data.ipynb  5d_EDA_more_data_II.ipynb
files/6_R/: .Rhistory  R_EDA.R
